<resources>
    <string name="app_name">温湿度标签</string>
    <string name="action_settings">Settings</string>

    <string name="username_hint">请输入用户名</string>
    <string name="password_hint">请输入密码</string>
    <string name="sign_in">登录</string>

    <string name="unSupport_nfc">设备不支持NFC功能！</string>
    <string name="please_open_nfc">设备NFC未开启，请手动开启！</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="please_login_again">请重新登录</string>
    <string name="login_load">登录中……</string>

    <string name="home_page">首页</string>
    <string name="gather">采集</string>
    <string name="records">记录</string>
    <string name="mine">我的</string>

    <string name="title_activity_capture">CaptureActivity</string>
    <string name="scan_code">扫描二维码</string>

    <string name="read_tag_lost">读取温湿度标签丢失</string>
    <string name="keep_tag_close_to_nfc">保持标签靠近手机NFC感应区</string>
    <string name="now_power_tag">非系统记录标签，无权操作</string>
    <string name="tag_not_belong_company">非本企业标签，无权操作</string>
    <string name="tag_no_data">标签没有开始记录数据，无权操作</string>
    <string name="tag_type_error">标签类型不对</string>
    <string name="tag_type_single_temp">标签类型为单温度记录类型，不能记录湿度</string>
    <string name="tag_was_stop">标签停止记录</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="info">信息</string>
    <string name="action_upload">上传</string>
    <string name="text_object">载体信息：</string>
    <string name="text_box">箱体编号：</string>
    <string name="text_hum_waring">湿度预警：</string>
    <string name="text_temp_waring">温度预警：</string>
    <string name="text_sample_interval">采样间隔：</string>
    <string name="text_config_info">配置信息</string>
    <string name="text_start_time">起始时间：</string>
    <string name="text_last_record">最近记录：</string>
    <string name="text_temp_size">温度范围：</string>
    <string name="text_hum_size">湿度范围：</string>
    <string name="text_record_info">记录信息</string>
    <string name="unknown">未知</string>
    <string name="action_search_net">云查询</string>
    <string name="continue_load_data">加载记录</string>
    <string name="text_goods">商品类型：</string>
    <string name="change_password">&#160;&#160;修改密码</string>
    <string name="check_update">&#160;&#160;检查更新(3.01)</string>
    <string name="sign_out">退出登录</string>
    <string name="title_activity_password">密码修改</string>
    <string name="old_password">旧&#160;&#160;密&#160;&#160;码：</string>
    <string name="old_password_hint">请输入旧密码</string>
    <string name="new_password">新&#160;&#160;密&#160;&#160;码：</string>
    <string name="new_password_hint">请输入新密码</string>
    <string name="confirm">确认</string>
    <string name="check_box_status_load">获取箱体使用信息</string>
    <string name="title_activity_manage">操作</string>
    <string name="text_box_describe">箱体描述：</string>
    <string name="text_box_describe_hint">请输入描述</string>
    <string name="text_box_seal_status">箱体类型：</string>
    <string name="incomplete_information">输入信息不完整</string>
    <string name="notice">提示</string>
    <string name="text_sample_info">采样信息：</string>
    <string name="start_tag_notice">配置生效后，在两秒内连续按三次启用按钮，指示灯连闪即可！</string>
    <string name="text_delay">启用延迟：</string>

    <string name="tag_was_write_code">标签被写入密码保护，不能配置</string>

    <string name="close_tag_to_config">请靠近标签进行信息配置</string>
    <string name="config_confirm_first">请先进行配置信息\'确认\'</string>
    <string name="unbind_post_load">上传解除绑定信息中……</string>
    <string name="config_data_post_load">上传配置信息中……</string>
    <string name="confirm_unbind_notice">\n是否进行解除绑定操作？</string>
    <string name="unbind_tag_success_to_continue">解除绑定成功，请继续操作</string>
    <string name="cancel">取消</string>
    <string name="text_address">当前地址：</string>
    <string name="text_seal">铅封编号：</string>
    <string name="deal_with_picture">图片处理中</string>
    <string name="submit_load">提交信息</string>
    <string name="text_exception">发现异常：</string>
    <string name="text_exception_info">异常信息：</string>
    <string name="text_exception_describe_hint">请输入异常信息</string>
    <string name="confirm_password">确认密码：</string>
    <string name="confirm_password_hint">再次输入新密码</string>
    <string name="action_nfc">NFC读取</string>
    <string name="show_picture">图片预览</string>
    <string name="net_records">平台数据展示</string>
    <string name="action_search">筛选</string>
    <string name="title_activity_filter">筛选</string>
    <string name="title_activity_nfc_base">NfcBaseActivity</string>
    <string name="device_list">设备列表</string>
    <string name="ble_not_supported">设备不支持BLE功能</string>
    <string name="scan_device">搜索设备</string>
    <string name="scaning">搜索中……</string>
    <string name="config">配置</string>
    <string name="net_error">网络连接故障，请检查网络</string>
    <string name="connected_success">连接成功</string>
    <string name="disconnect_fail">断开连接</string>
    <string name="format_get_data_info">获取温湿度信息%1$d%%</string>
    <string name="parse_config_info_fail">解析配置信息错误</string>
    <string name="no_data_info">没有记录信息</string>
    <string name="connect_ble_load">连接蓝牙设备中……</string>
    <string name="no_config_info_no_data">没有配置信息,无法采集记录</string>
    <string name="get_config_info_load">获取配置信息中……</string>
    <string name="stop_to_gather">已配置,请停止记录后再进行配置</string>
    <string name="send_config_info_error">发送配置信息失败</string>
    <string name="send_config_info_load">发送配置信息中</string>
    <string name="config_success">配置成功</string>
    <string name="no_location_address">未获取定位信息</string>
    <string name="please_choose_goods">请选择一个商品类型</string>
    <string name="load_info_load">加载信息</string>
    <string name="format_goods_info">采样间隔：%1$d分钟\n温度上限：%2$d℃\n温度下限：%3$d℃\n湿度上限：%4$d%%\n湿度下限：%5$d%%</string>
    <string name="do_success_to_connitue">操作成功，是否继续执行下一步？</string>
    <string name="next_step">下一步</string>
    <string name="over_step">结束</string>
    <string name="unbind">解绑</string>
    <string name="no_power_to_add_box">无权限添加新箱体</string>
    <string name="e_lock">电子锁：</string>
    <string name="upload_info_load">上传记录信息中……</string>

</resources>
