<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="com.huiwu.temperaturecontrol.PasswordActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorTitleTextBackground">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:gravity="center"
            android:text="@string/title_activity_password"
            android:textColor="@color/colorTitleText"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold" />

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorTitleLine" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#EAEAEA" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:collapseColumns="2"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <TableRow
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin">

            <TextView
                android:text="@string/old_password"
                android:textColor="@color/colorRecordText2"
                android:textSize="@dimen/password_text_size" />

            <EditText
                android:id="@+id/edit_old_password"
                android:layout_weight="1.0"
                android:background="@null"
                android:hint="@string/old_password_hint"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/colorRecordText1"
                android:textColorHint="@color/colorRecordText3"
                android:textSize="@dimen/password_text_size" />
        </TableRow>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#EAEAEA" />

        <TableRow
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin">

            <TextView
                android:text="@string/new_password"
                android:textColor="@color/colorRecordText2"
                android:textSize="@dimen/password_text_size" />

            <EditText
                android:id="@+id/edit_new_password"
                android:layout_weight="1.0"
                android:background="@null"
                android:hint="@string/new_password_hint"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/colorRecordText1"
                android:textColorHint="@color/colorRecordText3"
                android:textSize="@dimen/password_text_size" />
        </TableRow>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#EAEAEA" />

        <TableRow
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin">

            <TextView
                android:text="@string/confirm_password"
                android:textColor="@color/colorRecordText2"
                android:textSize="@dimen/password_text_size" />

            <EditText
                android:id="@+id/edit_confirm_password"
                android:layout_weight="1.0"
                android:background="@null"
                android:hint="@string/confirm_password_hint"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/colorRecordText1"
                android:textColorHint="@color/colorRecordText3"
                android:textSize="@dimen/password_text_size" />
        </TableRow>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#EAEAEA" />

    </TableLayout>

</LinearLayout>
