<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.huiwu.temperaturecontrol.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorTitleTextBackground">

        <TextView
            android:id="@+id/text_main_title"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorTitleText"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold" />

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignBottom="@+id/toolbar"
        android:background="@color/colorTitleLine" />

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/radioGroup"
        android:layout_below="@+id/toolbar" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorRadioBackground"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_home"
            style="@style/BannerRadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawableTop="@drawable/radio_home"
            android:text="@string/home_page"
            android:textSize="@dimen/radio_text_size" />

        <ImageView
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/colorRadioLine" />

        <RadioButton
            android:id="@+id/radio_gather"
            style="@style/BannerRadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawableTop="@drawable/radio_gather"
            android:text="@string/gather"
            android:textSize="@dimen/radio_text_size" />

        <ImageView
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/colorRadioLine" />

        <RadioButton
            android:id="@+id/radio_records"
            style="@style/BannerRadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawableTop="@drawable/radio_record"
            android:text="@string/records"
            android:textSize="@dimen/radio_text_size" />

        <ImageView
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/colorRadioLine" />

        <RadioButton
            android:id="@+id/radio_mine"
            style="@style/BannerRadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawableTop="@drawable/radio_user"
            android:text="@string/mine"
            android:textSize="@dimen/radio_text_size" />
    </RadioGroup>


</RelativeLayout>
