<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.huiwu.temperaturecontrol.FilterActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorTitleTextBackground">

        <TextView
            android:id="@+id/text_filter_title"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:gravity="center"
            android:text="@string/title_activity_filter"
            android:textColor="@color/colorTitleText"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold" />

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignBottom="@+id/toolbar"
        android:background="@color/colorTitleLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_goods"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:padding="@dimen/appbar_padding_top"
                android:text="@string/text_goods" />

            <RadioButton
                android:id="@+id/radio_boxes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:padding="@dimen/appbar_padding_top"
                android:text="@string/text_box" />

            <RadioButton
                android:id="@+id/radio_object"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:padding="@dimen/appbar_padding_top"
                android:text="@string/text_object" />
        </RadioGroup>

        <ListView
            android:id="@+id/listView_goods"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"></ListView>

        <ListView
            android:id="@+id/listView_boxes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"></ListView>

        <ListView
            android:id="@+id/listView_objects"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"></ListView>
    </LinearLayout>

</LinearLayout>
