<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.huiwu.temperaturecontrol.fragment.SealFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:collapseColumns="2">

        <TableRow
            android:background="#eceff4"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <TextView
                android:drawableLeft="@drawable/ic_manage_address"
                android:gravity="center_vertical"
                android:text="@string/text_address"
                android:textColor="@color/colorRecordText3"
                android:textSize="@dimen/password_text_size" />

            <TextView
                android:id="@+id/text_address"
                android:layout_weight="1.0"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_vertical"
                android:hint="等待定位信息"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true"
                android:textColor="@color/colorRecordText3"
                android:textColorHint="@color/colorRecordText3"
                android:textSize="@dimen/password_text_size" />

        </TableRow>

        <TableRow
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <TextView
                android:drawableLeft="@drawable/ic_manage_box"
                android:gravity="center_vertical"
                android:text="@string/text_box"
                android:textColor="@color/colorRecordText2"
                android:textSize="@dimen/password_text_size" />

            <TextView
                android:id="@+id/text_box_no"
                android:layout_weight="1.0"
                android:ellipsize="start"
                android:singleLine="true"
                android:textColor="@color/colorRecordText1"
                android:textSize="@dimen/password_text_size" />
        </TableRow>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@color/colorEditItemLine" />

        <TableRow
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:gravity="center_vertical">

            <TextView
                android:drawableLeft="@drawable/ic_manage_goods"
                android:gravity="center_vertical"
                android:text="@string/text_goods"
                android:textColor="@color/colorRecordText2"
                android:textSize="@dimen/password_text_size" />

            <TextView
                android:id="@+id/text_goods"
                android:layout_weight="1.0"
                android:ellipsize="start"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:textColor="@color/colorRecordText1"
                android:textColorHint="@color/colorRecordText3"
                android:textSize="@dimen/password_text_size" />
        </TableRow>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@color/colorEditItemLine" />

        <TableRow
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:gravity="center_vertical">

            <TextView
                android:drawableLeft="@drawable/ic_manage_object"
                android:gravity="center_vertical"
                android:text="@string/text_object"
                android:textColor="@color/colorRecordText2"
                android:textSize="@dimen/password_text_size" />

            <TextView
                android:id="@+id/text_object"
                android:layout_weight="1.0"
                android:ellipsize="start"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:textColor="@color/colorRecordText1"
                android:textColorHint="@color/colorRecordText3"
                android:textSize="@dimen/password_text_size" />
        </TableRow>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@color/colorEditItemLine" />

        <TableRow
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <TextView
                android:drawableLeft="@drawable/ic_manage_seal_status"
                android:gravity="center_vertical"
                android:text="@string/text_exception"
                android:textColor="@color/colorRecordText2"
                android:textSize="@dimen/password_text_size" />

            <CheckBox
                android:id="@+id/check_exception"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@color/colorEditItemLine" />

        <TableRow
            android:id="@+id/row_exception"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:visibility="gone">

            <TextView
                android:drawableLeft="@drawable/ic_manage_describe"
                android:gravity="center_vertical"
                android:text="@string/text_exception_info"
                android:textColor="@color/colorRecordText2"
                android:textSize="@dimen/password_text_size" />

            <EditText
                android:id="@+id/text_exception"
                android:layout_width="0dp"
                android:layout_weight="1.0"
                android:background="@null"
                android:hint="@string/text_exception_describe_hint"
                android:maxLines="2"
                android:textColor="@color/colorRecordText1"
                android:textColorHint="@color/colorRecordText3"
                android:textSize="@dimen/password_text_size" />
        </TableRow>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@color/colorEditItemLine" />

        <TableRow
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/text_seal_title"
                android:drawableLeft="@drawable/ic_manage_seal"
                android:gravity="center_vertical"
                android:text="@string/text_seal"
                android:textColor="@color/colorRecordText2"
                android:textSize="@dimen/password_text_size" />

            <TextView
                android:id="@+id/text_seal"
                android:layout_weight="1.0"
                android:drawableRight="@drawable/ic_text_right"
                android:ellipsize="start"
                android:gravity="center_vertical"
                android:hint="点击读取"
                android:singleLine="true"
                android:textColor="@color/colorRecordText1"
                android:textSize="@dimen/password_text_size" />
        </TableRow>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@color/colorEditItemLine" />

        <RelativeLayout android:layout_margin="48dp">

            <ImageView
                android:id="@+id/image_picture"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_manage_picture" />

            <ImageView
                android:id="@+id/image_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_manage_delete"
                android:visibility="gone" />

        </RelativeLayout>


    </TableLayout>


</android.support.v4.widget.NestedScrollView>
